misc small improvements
* Videos embedded on burning man page + better picture ordering
* anchor scrolling support
* lazy loading youtube videos across the site

--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -9,19 +9,22 @@
   
   <h1 style="text-align: center">What it takes to make a fursuit</h1>
   <div class="divider"></div>
-  How hard could it be? Well, the answer really depends on whether or not you hit burnout, and how hard it hits you.
+  <p>How hard could it be? Well, the answer really depends on whether or not you hit burnout, and how hard it hits you.</p>
 
-  It'll make more sense to explain the process categorically by individual pieces rather than chronologically.
-  Feel free to scroll down or click to specifc sections of interest.
+  <p>It'll make more sense to explain the process categorically by individual pieces rather than chronologically.
+  Feel free to scroll down or click to specific sections of interest.</p>
 
-  <div class="table-of-contents">
-    <a href="fursuit#head">Head</a>
-    <a href="fursuit#hands">Hands</a>
-    <a href="fursuit#bodysuit">Body</a>
-    <a href="fursuit#feet">Feet</a>
-    <a href="fursuit#tail">Tail</a>
-    <a href="fursuit#result">End Result</a>
-  </div>
+  <div class="divider"></div>
+
+  <h2>Table of Contents</h2>
+  <ol>
+    <li><a href="fursuit#head">Head</a></li>
+    <li><a href="fursuit#hands">Hands</a></li>
+    <li><a href="fursuit#bodysuit">Body</a></li>
+    <li><a href="fursuit#feet">Feet</a></li>
+    <li><a href="fursuit#tail">Tail</a></li>
+    <li><a href="fursuit#result">End Result</a></li>
+  </ol>
 
   <div class="divider"></div>
   <div id="head" class="section-header">
@@ -29,11 +32,11 @@
   </div>
 
   <p>
-    I started with a 3d printed headbase that I bought from an established maker named
+    I started with a 3d printed head-base that I bought from an established maker named
     <a href="https://www.mixedcandycostumes.com/">MixedCandy</a>, off of their etsy page they sold a
     base with the expression "grumpy K9". Onto this I added several layers of masking tape in alternating grain
     direction and drew on the pattern where color boundaries would be, along with more annotations to help with
-    cutting and keeping track of how the peices align after they're off the head. We'll use these peices as a
+    cutting and keeping track of how the pieces align after they're off the head. We'll use these pieces as a
     pattern to cut fur later.
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hydUllmBv3eIrA09_ijr5hZXszqYTFQr" />
@@ -47,7 +50,7 @@
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iG0BLSyDQLRIrVIK0ZB8DDMGkTG2GzxZ" />
   <p>
     I don't have many progress pics of hand sewing the fur mask together but this is the way it looked before putting
-    it onto the base. I felt I had to hand sew it to get a <i>very</i> small seam that wouldn't buldge and deform
+    it onto the base. I felt I had to hand sew it to get a <i>very</i> small seam that wouldn't bulge and deform
     against the base. Kinda Silence of the Lambs vibes, right?
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1icVbM01Tn5doj1jK7CBU-6us10gUDXXL" />
@@ -57,7 +60,7 @@
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iMh-aFOTPsy0_fScsNljvlHvc-H_eP3o" />
   <p>
-    This is what it would look like "improperly" strectched over the base, but with the eyes, teeth, hair, and foam base
+    This is what it would look like "improperly" stretched over the base, but with the eyes, teeth, hair, and foam base
     ears in place to get an idea of how progress is going and the visual direction it's headed in.
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iTAiyVe_wwxSdCrDyBbP5SiqGliCm10c" />
@@ -91,14 +94,14 @@
     how well it worked in the end.
   </p>
   <p>
-    This is what it looked like after fully applying the glue! The masking tape is wrapping around all unsewn edges and
+    This is what it looked like after fully applying the glue! The masking tape is wrapping around all un-sewn edges and
     into the interior to hold the fur tight against the base.
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1iYDaF6C6BuZDk6jNjjRjggN4xeudJ6Cx" />
   <p>
     The mohawk is a long triangular strip of foam with 2 strips of red fur sewn together and glued to it. That mohawk
     was then baseball stitched into the fur head and down along the back of the neck. The baseball stitching is
-    surpisingly loose and spread out; you can wiggle your finger through it from one side to the other but it worked
+    surprisingly loose and spread out; you can wiggle your finger through it from one side to the other but it worked
     really well and you'd never know.
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1ir1Y2U03ebZ8pl6vzG4DDylbMA7VwZAj" />
@@ -116,9 +119,9 @@
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlLYP_Fd436Pze2pkGOWYPA1lbdhc50O" />
   <p>
-    For the pads beneath claws, I taped and pinned the template guide into the backside of the fabrice then sewed all
+    For the pads beneath claws, I taped and pinned the template guide into the backside of the fabric then sewed all
     the pads in one go with a single large sheet of velour then cut the unneeded velour away as close to the stitching
-    as I could. This created empty pads on the fur side of the fabric, and I cut small opennings into the fur which
+    as I could. This created empty pads on the fur side of the fabric, and I cut small openings into the fur which
     polyfil could be stuffed in and then sewn shut again. This creates large plushy pads, aka beans.
   </p>
   <img loading="lazy" src="https://lh3.google.com/u/0/d/1hjnVSBHOdSAkhcfDWY232iKSJdKJQ6Ja" />
@@ -134,7 +137,7 @@
     <h2>Bodysuit</h2>
   </div>
   <p>
-    Unless you're a tailor, the most straighforward way to get super accurate pattern of your body is to make a duct
+    Unless you're a tailor, the most straight-forward way to get super accurate pattern of your body is to make a duct
     tape dummy. There are tons of videos online showing how to do this and it's a several person job. You basically
     wear a cheap and thin painter suit while others wrap you in 2 layers of duct tape then cut you out of it. 
   </p>
