--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -9,7 +9,6 @@
 <mat-card>
   <h1 style="text-align: center">Burning Man, 2023</h1>
   <div class="divider"></div>
-  <!-- TODO: Intro description and forward -->  
 
   <h1 style="text-align: center"><b>THIS PAGE IS STILL HEAVILY UNDER CONSTRUCTION</b></h1>
 
@@ -23,10 +22,14 @@
   <img loading="lazy" src="https://imgur.com/jFwj1PE.jpg" />
   <img loading="lazy" src="https://imgur.com/5H5p40Y.jpg" />
   <img loading="lazy" src="https://imgur.com/UmbLGVb.jpg" />
+  <img loading="lazy" src="https://imgur.com/XwX2dhE.jpg" />
   <img loading="lazy" src="https://imgur.com/5DPOgp9.jpg" />
   <img loading="lazy" src="https://imgur.com/wWQFJ2O.jpg" />
-  <img loading="lazy" src="https://imgur.com/XwX2dhE.jpg" />
-  <img loading="lazy" src="https://imgur.com/W0u7scg.jpg" />
+  
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/G03xm09LUzw" width="fit-content" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+  
+  <img loading="lazy" src="https://imgur.com/9YeBNCO.jpg" />
   <p>
     This next image is one of my favorite pictures of the entire burn, because it's very representative of the kind of thing
     you experience at night when biking through deep playa. Riding off into the dark while high, you hear the distant
@@ -41,19 +44,19 @@
 
   <div class="divider"></div>
   <h2>Friday</h2>
-  <img loading="lazy" src="https://imgur.com/b6sm1ZA.jpg" />
-  <img loading="lazy" src="https://imgur.com/pGaYQd8.jpg" />
+  <img loading="lazy" src="https://imgur.com/bntdbYV.jpg" />
+  <img loading="lazy" src="https://imgur.com/vsjDZMZ.jpg" />
   <img loading="lazy" src="https://imgur.com/VcWDzWO.jpg" />
   <p>
-    This peice was one of my favorites, it was a giant bison made of driftwood with a guiding lantern the illuminated
+    This piece was one of my favorites, it was a giant bison made of driftwood with a guiding lantern the illuminated
     the night from a distance, and once you approached it there would be a ladder to climb up onto a porch alongside
     the torso. You could enter into the torso through a decaying wooden door, and inside there was an immaculately done
     up cottage living room, complete with a rocking chair, wood-burning cast iron fireplace, rugs, and a small
     chandelier at head level. I regret not getting more pictures of this one!
   </p>
   <img loading="lazy" src="https://imgur.com/gcB6gtx.jpg" />
-  <img loading="lazy" src="https://imgur.com/bntdbYV.jpg" />
-  <img loading="lazy" src="https://imgur.com/vsjDZMZ.jpg" />
+  <img loading="lazy" src="https://imgur.com/W0u7scg.jpg" />
+
   <p>
     I visited the temple, but didn't take any pictures besides this one from the outside. As you approach it, the crowds
     energy completely changes and everything becomes silent and pensive. The air practically weighs heavily in your lungs
@@ -66,17 +69,24 @@
     deeply into some stranger's life. 
   </p>
   <img loading="lazy" src="https://imgur.com/0N13gLb.jpg" />
-  
-  <div class="divider"></div>
-  <h2>Saturday</h2>
-  <img loading="lazy" src="https://imgur.com/9YeBNCO.jpg" />
+
+  <img loading="lazy" src="https://imgur.com/pGaYQd8.jpg" />
+
+  <img loading="lazy" src="https://imgur.com/b6sm1ZA.jpg" />  
   <img loading="lazy" src="https://imgur.com/msuqoh0.jpg" />
   <img loading="lazy" src="https://imgur.com/DdHgoD4.jpg" />
+
+  <div class="divider"></div>
+  <h2>Saturday</h2>
+  <img loading="lazy" src="https://imgur.com/Vck4VXI.jpg" />
   <img loading="lazy" src="https://imgur.com/0KZDVZx.jpg" />
   <img loading="lazy" src="https://imgur.com/s6xjGOs.jpg" />
   <img loading="lazy" src="https://imgur.com/l0fWWsO.jpg" />
+  
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/OhkUZUHFtwI" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   <p>
-    Towards one of the very farthest corners of the outer play, I saw the very faintest of yellow lights flickering like
+    Towards one of the very farthest corners of the outer playa, I saw the very faintest of yellow lights flickering like
     a candle in the far distance. It was so small that I thought it might be someone's distant headlamp but as it
     remained motionless I decided to ride towards it. As I got closer, I saw it surrounded by a large dim red glow, and
     happening upon it I found it was a giant replica of the Fat Man atom bomb acting as a massive combo space heater and
@@ -84,13 +94,11 @@
     I have missed this after so much time exploring out here?
   </p>
   <img loading="lazy" src="https://imgur.com/ECzRKVv.jpg" />
-  <img loading="lazy" src="https://imgur.com/Vck4VXI.jpg" />
 
   <div class="divider"></div>
   <h2>Sunday</h2>
   <img loading="lazy" src="https://imgur.com/rKyLRTV.jpg" />
   <img loading="lazy" src="https://imgur.com/kVVv3J7.jpg" />
-  <img loading="lazy" src="https://imgur.com/3LJwWuQ.jpg" />
   <p>
     Watching the man burn was incredible. Not only was it by far the largest bonfire I'd ever seen by far, but it had
     legitimately the best fireworks show I've ever seen in my life. It's not by video, but
@@ -99,27 +107,44 @@
     would be a large explosion to signal the start of the man burning. That explosion came after the fireworks, and it
     was this perfectly round ball of light radiant heat you could feel on your face from a quarter mile away that
     materialized out of nowhere in an instant. The audible <b>POP!</b> of it hits you delayed and it really drives home
-    the size of the pyrotechnics going on.
+    the size of the pyrotechnics going on. Here's my video of the man falling down after some time:
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/BtWrjoaa3G8" width="fit-content" frameborder="0"
+      allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   </p>
   <img loading="lazy" src="https://imgur.com/CL5Ra65.jpg" />
   <p>
     As the man and structure he's on burns down to a smoldering hill and the radiant heat begins to border on being
-    tolerable, the guards allow everyone to approach. A large portion of people begin stripping off their clothes and
+    tolerable, the guards allow everyone to approach. 
+  </p>
+  
+  <img loading="lazy" src="https://imgur.com/3LJwWuQ.jpg" />
+  <p>A large portion of people begin stripping off their clothes and
     start to run in a massive circle around the bonfire. I joined in and followed the crowd as it raced around, the heat
     unbelievably hot. The pile was square in shape and rounding the corners was so hot at times you'd be jumping over
-    the section and people would be on the sidelines with spray bottles of water to help cool you off. I set me clothes
-    on the ground, but completely lost track of them by the time I was ready to get dressed again and wandered naked for
-    15 minutes through the hundreds of side lined crowd looking for my clothes pile. Being naked around strangers you'll
-    never see again wasn't as big an issue as how cold it was getting without direct line of sight to the bonfire. 
+    the section and people would be on the sidelines with spray bottles of water to help cool you off. 
   </p>
   <img loading="lazy" src="https://imgur.com/5ZjFceb.jpg" />
+  <p>
+    I set my clothes
+    on the ground, but completely lost track of them by the time I was ready to get dressed again and wandered naked for
+    15 minutes through the hundreds of side lined crowd looking for my clothes pile. Being naked around strangers you'll
+    never see again wasn't as big an issue as how cold it was getting without direct line of sight to the bonfire.
+  </p>
   <p>
     While the fervor of the the main burn was slowing down, all the art cars had been encircling the area, all on full
     display for the main night, car after car lined up pouring out music and light.
   </p>
   <img loading="lazy" src="https://imgur.com/rYbtABg.jpg" />
+
+  
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/Fe9a2Vg-2rU" width="fit-content" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>  
+
   <img loading="lazy" src="https://imgur.com/ynvLADj.jpg" />
   <img loading="lazy" src="https://imgur.com/iRm7Vnd.jpg" />
+
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/uQ_kAJ2N1Lw" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 
   
 </mat-card>
