--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -132,7 +132,7 @@
     we hiked up the largest ridgeline yet. It was incredibly steep, all things considered and climbed higher than all
     the dunes before this one.
 
-    <iframe class="youtube-player" src="https://www.youtube.com/embed/MbiAI1LF5Ec" frameborder="0"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/MbiAI1LF5Ec" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
     <img loading="lazy" src="https://imgur.com/3wcLMFN.jpg" />
     Crossing over the top you could look out to the next valley of smaller dunes and an oasis. If you look far enough
@@ -197,7 +197,7 @@
     section we climbed slightly uphill till a relative plateau. The plateau continued for about a mile until it dropped
     off again back towards the valley, and gave way to a great view of the valley and distant mountain ranges.
 
-    <iframe class="youtube-player" src="https://www.youtube.com/embed/wvpk91oa3l4" title="YouTube video player"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/wvpk91oa3l4" title="YouTube video player"
       frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share"
       allowfullscreen></iframe>
     Those mountain ridges in that video are Mt. Zarga and what we would climb. We continued on and passed by the
@@ -210,7 +210,7 @@
     peak we descended down the north ridgeline of this range and met our camels halfway down in a small alcove sheltered
     by a large boulder above us for shade.
 
-    <iframe class="youtube-player" src="https://www.youtube.com/embed/gcYJ2fIjods" title="YouTube video player"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/gcYJ2fIjods" title="YouTube video player"
       frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share"
       allowfullscreen></iframe>
     We had lunch here, more Mauritanian couscous with canned fish and carrots. Unfortunately the wind picked up just as we
@@ -320,7 +320,7 @@
     palm fronds cover the soft sandy floor between both cliff faces. Water dribbles out of the lower half of the cliffs
     and forms stalagmites.
 
-    <iframe class="youtube-player" src="https://www.youtube.com/embed/bQlAgPh4OO8" frameborder="0"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/bQlAgPh4OO8" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
     <img loading="lazy" src="https://imgur.com/tZmWMxJ.jpg" />
     <img loading="lazy" src="https://imgur.com/YhNDFqZ.jpg" />
@@ -366,7 +366,7 @@
     bread and used it to scoop up rice and camel meat from a communal plate while continuing to share travel stories in
     mixtures of English and French, and it was all very good.
 
-    <iframe class="youtube-player" src="https://www.youtube.com/embed/7jbgUn1fCZg" frameborder="0"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/7jbgUn1fCZg" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
     If you're wondering, camel meat tastes good. The fat is incredibly chewy; probably the chewiest fat of any animal
     I've eaten. The meat is somewhere similar to beef but it has a richer, more oily quality to it. It doesn't melt in
@@ -431,7 +431,7 @@
     the interlocking hoppers as the locomotive started pulling them all. When it reached mine it was almost deafening
     and the jolt nearly sent me falling backwards on my back. As the train pulled out of town, I took a few more photos
     and then put on the mask and goggles. We were on our way, and I had made it on.
-    <iframe class="youtube-player" src="https://www.youtube.com/embed/HY9zQ_lwhS4" frameborder="0"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/HY9zQ_lwhS4" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
     <img loading="lazy" src="https://imgur.com/y1CLtwA.jpg" />
     <img loading="lazy" src="https://imgur.com/ckQMhhZ.jpg" />
