Adding missing thumbnail

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -58,6 +58,7 @@
       from avionics equipment an the good ol' BMP280 barometer to make an altimeter with.<br>
       Finding even 4 of these displays <i>anywhere</i> online literally took months of scouring.
     </p>
+    <img loading="lazy" src="https://www.industrialalchemy.org/media2/store/store1/alphaminitron1.jpg"/>
   </mat-card>
 </a>
 
