--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -39,31 +39,31 @@
     cutting and keeping track of how the pieces align after they're off the head. We'll use these pieces as a
     pattern to cut fur later.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hydUllmBv3eIrA09_ijr5hZXszqYTFQr" />
+  <img loading="lazy" src="https://imgur.com/6vp5MQi.jpg" />
   <p>
     I had a personal goal of designing the interior to be completely removable everywhere that my head physically
     touched for easier cleaning. I used quarter-sized disk magnets on the inside of the base, paired with matching
     magnets inside of spandex covered foam "cups" that wrap around the sides and back of your head. Also, I added a
     thin removable chin rest. This is what it looks like on the inside.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hxXz9USfZCDvCR9oIV-UtEkQjHHlau35" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iG0BLSyDQLRIrVIK0ZB8DDMGkTG2GzxZ" />
+  <img loading="lazy" src="https://imgur.com/UFAOLo5.jpg" />
+  <img loading="lazy" src="https://imgur.com/arUh3IZ.jpg" />
   <p>
     I don't have many progress pics of hand sewing the fur mask together but this is the way it looked before putting
     it onto the base. I felt I had to hand sew it to get a <i>very</i> small seam that wouldn't bulge and deform
     against the base. Kinda Silence of the Lambs vibes, right?
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1icVbM01Tn5doj1jK7CBU-6us10gUDXXL" />
+  <img loading="lazy" src="https://imgur.com/lw4Y7wG.jpg" />
   <p>
     After almost 3 weeks of hand-sewing the mask for 2-5 hours a day, I finally finished the face and neck. This was
     the first time seeing it "properly" stretched over the base it was made for.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iMh-aFOTPsy0_fScsNljvlHvc-H_eP3o" />
+  <img loading="lazy" src="https://imgur.com/Tk0UvMK.jpg" />
   <p>
     This is what it would look like "improperly" stretched over the base, but with the eyes, teeth, hair, and foam base
     ears in place to get an idea of how progress is going and the visual direction it's headed in.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iTAiyVe_wwxSdCrDyBbP5SiqGliCm10c" />
+  <img loading="lazy" src="https://imgur.com/YwK2PPO.jpg" />
   <p>
     Once the face is sewn together, baseball stitching in the ears is next. The inner ear is just black felt to give a
     sense of depth and the foam lobes are wrapped in more fur which is hot glued on. After the ears are in place, I added
@@ -71,21 +71,22 @@
     and plump; there wouldn't be any chance for loose fur to be wrinkled in these areas and it helped reduce visibility
     of seams. The entire fur mask is ready for permanent affixation to the base!
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1icXbNWwDfQC76vBW87k1zHEGGfNR67FH" />
+  <img loading="lazy" src="https://imgur.com/fOZsJOm.jpg" />
   <p>
     This was another novel thing I tried out in my build process: I wanted to REALLY be sure that the fur would never
     come unglued in a few critical points along the face; if they did, there would be no way to fix it once the fabric
-    fusion glue dries. These are places like concave dimples, the underside of cheeks, the furled eyebrow/nose bridge,
-    etc.. Anywhere with significant concave curves. My idea was to drill very small holes in those spots, stretch the
-    fur mask over the base, then push sewing needles through the holes and mask to create a loop of threading. I would
-    tie the threading off with a lot of slack in the loops like this:
+    fusion glue dries. These are places like dimples, the underside of cheeks, the furled eyebrow/nose bridge,
+    etc.. Anywhere with significant concave curves. I drilled very small holes in those spots, stretched the
+    fur mask over the base, then pushed sewing needles through the holes and mask to create a loop of thread. I
+    tied the thread off with a lot of slack in the loops like this:
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1idBDiQQnzu3SvDNneh_cpMebHKKFOraD" />
+  <img loading="lazy" src="https://imgur.com/GYuAATG.jpg" />
   <p>
     I wanted not only to make permanent physical anchors holding these key spots in place, but also help dramatically
-    speed up my working time while glueing the mask to the base. I opted for fabric fusion after weighing a few options
-    because it was a clear permanent fabric glue with a "long" working time of ~ 30 minutes which still felt like very
-    little time.
+    speed up my working time while glueing the mask to the base. I opted for
+    <a href="https://aleenes.com/products/aleenes-fabric-fusion-permanent-fabric-adhesive-4-fl-oz">Fabric Fusion</a>
+    after weighing a few options because it was a clear permanent fabric glue with a "long" working time of ~ 30
+    minutes which still felt like very little time.
   </p>
   <p>
     By "pre-stretching" the mask over the base to add these thread loop anchors, I was able to grab all of them
@@ -97,14 +98,14 @@
     This is what it looked like after fully applying the glue! The masking tape is wrapping around all un-sewn edges and
     into the interior to hold the fur tight against the base.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1iYDaF6C6BuZDk6jNjjRjggN4xeudJ6Cx" />
+  <img loading="lazy" src="https://imgur.com/LshpDBQ.jpg" />
   <p>
     The mohawk is a long triangular strip of foam with 2 strips of red fur sewn together and glued to it. That mohawk
     was then baseball stitched into the fur head and down along the back of the neck. The baseball stitching is
     surprisingly loose and spread out; you can wiggle your finger through it from one side to the other but it worked
     really well and you'd never know.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1ir1Y2U03ebZ8pl6vzG4DDylbMA7VwZAj" />
+  <img loading="lazy" src="https://imgur.com/NMhhVIe.jpg" />
 
   <div class="divider"></div>
   <div id="hands" class="section-header">
@@ -117,20 +118,22 @@
     by. I started by creating all the claws out of stretchy black velvet/velour material, stuffing them with polyfil,
     then sewing them into the tops of each finger. They're inserted into a dart in the fabric then it's all sewn shut.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlLYP_Fd436Pze2pkGOWYPA1lbdhc50O" />
+  <img loading="lazy" src="https://imgur.com/FOcNE2O.jpg" />
   <p>
     For the pads beneath claws, I taped and pinned the template guide into the backside of the fabric then sewed all
     the pads in one go with a single large sheet of velour then cut the unneeded velour away as close to the stitching
     as I could. This created empty pads on the fur side of the fabric, and I cut small openings into the fur which
     polyfil could be stuffed in and then sewn shut again. This creates large plushy pads, aka beans.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hjnVSBHOdSAkhcfDWY232iKSJdKJQ6Ja" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hwP1Dx_a_WdaP8-kKeD1m3YvDUOUwFrj" />
+  <img loading="lazy" src="https://imgur.com/8cWjPkV.jpg" />
+  <img loading="lazy" src="https://imgur.com/XZkTuTd.jpg" />
   <p>
     Once top and bottom halves were finished, it was time to painstakingly sew them together (<b>very</b> hard to feed
     the fabric in at webbing of fingers). then flip them inside out to see the finished result
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hzgeaVNngUyCEFo5nezAbv1EnLQB3uUJ" />
+  <img loading="lazy" src="https://imgur.com/MvZFA1U.jpg" />
+
+  <!-- TODO: Add a pic of finished handpaw here-->
 
   <div class="divider"></div>
   <div id="bodysuit" class="section-header">
@@ -145,25 +148,25 @@
     I built up a skin-tight masking tape layer around the dummy that I can use to draw on without worrying that I'm
     affecting the dummy itself (in case revisions need to be done). 
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hB9yE3gn14VV3WBUPuwr6ozUPj9_UN_N" />
+  <img loading="lazy" src="https://imgur.com/rObO3k5.jpg" />
   <p>
     Once I finished drawing my pattern onto the dummies masking tape shell, I cut it off and used the shapes as
     patterns for cutting the fur. There are tons of videos online explaining this process. For my first bodysuit I
     decided to make it plantigrade (no special padding)
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hSwGnwUpbYWFdfAK36R3RgRE3wuQKCHH" />
+  <img loading="lazy" src="https://imgur.com/sV97P0M.jpg" />
   <p>
     Once all pieces were cut out (several days of effort) I double checked they were all there by laying them out.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hX5pz24gvc3o_AhP6Qht5BTFSarz6FbC" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hlRn0Rb9PiiaI0mIVBoU-6hfg02NRXhj" />
+  <img loading="lazy" src="https://imgur.com/Pq148ha.jpg" />
+  <img loading="lazy" src="https://imgur.com/gOFSieU.jpg" />
   <p>
     I decided to sew it up in left and right halves independently which helped make the amount of material you're
     working with at any moment much more manageable. I added a zipper down the middle front and I followed
     <a href="https://www.etsy.com/listing/684815037/premium-tutorial-deluxe-zipper-technique">this AMAZING deluxe zipper guide</a>.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hcfIkP85XabSqM3eeXPiiYuehmSr0aG7" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1jXBEYkAf_MP4YhXOneJNwLoDdk3oh_fW" />
+  <img loading="lazy" src="https://imgur.com/EZq7jsu.jpg" />
+  <img loading="lazy" src="https://imgur.com/1DJgFPL.jpg" />
 
   <div class="divider"></div>
   <div id="feet" class="section-header">
@@ -177,18 +180,18 @@
     to be as small as I could make it to still fit the shoes then re-did the foam toes in the same way as before, but
     smaller this time.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hIF5p7vxfDE8LcK8EZqACYqFgwsSjJzr" />
+  <img loading="lazy" src="https://imgur.com/bAqvQK4.jpg" />
   <p>
     Once the overall shape felt good enough, I added some stiff foam around the back of the heels then masking taped up
     one of the feet to get a fur pattern for it.
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1hZFnxe1kZ67B_bGCilIGz9CT2p9ppbnr" />
+  <img loading="lazy" src="https://imgur.com/gqK1mQR.jpg" />
   <p>
     I cut out the fur based on the pattern, sewed it into a "cover" for each foot (doing a mirrored pattern for the
     other foot), then glued it all down with hot glue and e6000.
   </p>
   <p>
-    Not pictured yet is the rubber threading I added to the underside of the feet. I didn't realize how insanely
+    Not pictured yet is the rubber tread I added to the underside of the feet. I didn't realize how insanely
     slippery the feet are on wet surfaces till I walked on one and nearly fell. It's no joke how slippery the feet were
     on smooth wet floors. 
   </p>
@@ -204,7 +207,7 @@
     the fur is applied it becomes too stiff and doesn't wag correctly. This is what it looks
     like as the end result:
   </p>
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1jL99ze7usjJzkqf4-5q_XonvklwCn5nE" />
+  <img loading="lazy" src="https://imgur.com/RXGwWfb.jpg" />
 
   
   <div class="divider"></div>
@@ -217,6 +220,6 @@
     well. Here are a few pics I had taken of me in it at FC and LVFC!
   </p>
   
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/13nUP1ZGG8CqDYxF7_AH0KF2ium4HzpJn" />
-  <img loading="lazy" src="https://lh3.google.com/u/0/d/1K4N-oq8LWmQ8ZTVijDah-04uPHEKTwjH" />
+  <img loading="lazy" src="https://imgur.com/lHuqm7u.jpg" />
+  <img loading="lazy" src="https://imgur.com/gJjDskN.jpg" />
 </mat-card>
