--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -21,7 +21,7 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>Flip Dot Wall Project</mat-card-title>
-      <mat-card-subtitle>like oldschool train displays but better</mat-card-subtitle>
+      <mat-card-subtitle>Like old-school train displays, but better</mat-card-subtitle>
     </mat-card-header>
     <p>
       An old wall of flip dots at work fell into disrepair, and the panels were being parted out.
@@ -88,7 +88,7 @@
       antenna I had printed on a flex PCB from Oshpark, and a NFC chip that I got by melting down
       one of my credit cards in acetone.<br>
       Outside of the watch, the NFC chip and custom antenna worked like a charm!! However, I get
-      too much parasitic capacitance or other inteference when nestled in the digital watch case.
+      too much parasitic capacitance or other interference when nestled in the digital watch case.
       I'll need to figure this out to solve it and call it done.
     </p>
     <img loading="lazy" src="https://imgur.com/WboU1Qg.jpg" />
@@ -102,15 +102,12 @@
       <mat-card-subtitle>very stoked</mat-card-subtitle>
     </mat-card-header>
     <p>
-      A road bike is to a mounntain bike, as a skateboard is to a mountainboard. Their height of popularity
+      A road bike is to a mountain bike, as a skateboard is to a mountainboard. Their height of popularity
       was in the early 2000's along with the X-games. Some compare it to the sensation of snowboarding,
-      but like most analogies it's a little bit of a stetch.<br>
+      but like most analogies it's a little bit of a stretch.<br>
       This was a major project where I learned about good battery design, some machining skills, and a
       lot of patience.
     </p>
-    <!-- <blockquote class="imgur-embed-pub" lang="en" data-id="a/YKbkF02">
-      <a href="https://imgur.com/a/YKbkF02" target="_blank">Electric Mountainboard build</a>
-    </blockquote> -->
     <img loading="lazy" src="https://imgur.com/MCgCxjL.jpg" />
   </mat-card>
 </a>
@@ -123,10 +120,10 @@
     </mat-card-header>
     <p>
       Wanting to make another watch after finishing the nixie tube watch, I decided to try working with
-      some <a href="https://www.industrialalchemy.org/articleview.php?item=750" target="_blank">retro dot matrix dipslays</a>.
-      These are REALLY neet to look at if you can get your hands on them. They're very early gallium-phosphate
-      LEDS; the only application I've seen them used in are for commercial airplane cockpit displays. Because
-      these were used in avionics, they are ceramic case-bodies and the top layer is saphire. I was able to
+      some <a href="https://www.industrialalchemy.org/articleview.php?item=750" target="_blank">retro dot matrix displays</a>.
+      These are REALLY neat to look at if you can get your hands on them. They're very early gallium-phosphate
+      LEDs; the only application I've seen them used in are for commercial airplane cockpit displays. Because
+      these were used in avionics, they are ceramic case-bodies and the top layer is sapphire. I was able to
       write <a href="https://github.com/blakewilliams1/dot-matrix-watch-2" target="_blank">these display drivers</a> for it
       based on <a href="http://www.datasheetspdf.com/pdf-down/H/D/S/HDSP2000_Hewlett-Packard.pdf" target="_blank">these xerox scans</a>
       of old datasheets from the 1970's.
@@ -142,7 +139,7 @@
       <mat-card-subtitle>Check the divergence!</mat-card-subtitle>
     </mat-card-header>
     <p>
-      This was one of my first exposures to hardware design beyond simple arudino proto boards that
+      This was one of my first exposures to hardware design beyond simple arduino proto boards that
       drove small motors or read from simple sensors. I heavily based my schematic off of an existing
       one I found online by <a href="http://www.cathodecorner.com/nixiewatch/firmware/firmware.html" target="_blank">David Forbes</a>.
       The main difference is that mine uses four IN-17 nixie tubes instead of just two B5870L tubes.
