--- a/src/app/career/career_page.scss
+++ b/src/app/career/career_page.scss
@@ -1,9 +1,4 @@
-.preamble {
-  border-bottom: 1px solid gray;
-  padding: 20px 20px 20px 5%;
-}
-
 timeline {
   display: block;
-  margin: 0 5%;
+  margin: 20px 5%;
 }
