--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -5,12 +5,17 @@
   <a mat-tab-link routerLink="/career">Career</a>
 </nav>
 
-
 <mat-card>
   <h1 style="text-align: center">Burning Man, 2023</h1>
   <div class="divider"></div>
 
-  <h1 style="text-align: center"><b>THIS PAGE IS STILL HEAVILY UNDER CONSTRUCTION</b></h1>
+  <p>
+    For a while I'd been hesitant about filling this out; on one hand I want to share an experience I had that might
+    resonate with others, but on the other hand it feels like this goes against the
+    <a href="https://burningman.org/about/10-principles/" target="_blank">Immediacy and De-commodification principles</a> of
+    the event. Ultimately I decided to fill this in more; this isn't some massively public youtube-style vlog trying to
+    commodify my experience at Burning Man, I'm a single dude sharing links his personal website to his friends.
+  </p>
 
   <div class="divider"></div>
   <h2>Thursday</h2>
@@ -20,15 +25,62 @@
     out to the playa.
   </p>
   <img loading="lazy" src="https://imgur.com/jFwj1PE.jpg" />
+  <p>
+    By the time I had arrived, pretty much all of the attendees were there already so there was close to no line for
+    entrance. I waited at the front of the line for the next round of cars to drive into ticket processing and vehicle
+    inspections.
+  <img loading="lazy" src="https://imgur.com/MU2JLMu.jpg" />
   <img loading="lazy" src="https://imgur.com/5H5p40Y.jpg" />
+  <p>
+    After making it through the lines and ringing the gong at entrance, I made my way towards the camps around 6:30 & C.
+
+  </p>
   <img loading="lazy" src="https://imgur.com/UmbLGVb.jpg" />
   <img loading="lazy" src="https://imgur.com/XwX2dhE.jpg" />
+  <p>
+    Finding art installations like what's in the next photo was super common. The closer you got to the Man, the higher
+    the density of art/sculptures/interactive things. As you start making your way out into the deep playa, they taper
+    off and you see oddities scattered off on the distant horizon that you need to pedal out to.
+  </p>
+  <img loading="lazy" src="https://imgur.com/DgX1ymj.jpg" />
+  <p>
+    Two friends of mine from Canada were getting married at the camp the night I arrived! The ceremony was held inside
+    the common space of the camp and the vows were a good mix of funny and thoughtful.
+  </p>
   <img loading="lazy" src="https://imgur.com/5DPOgp9.jpg" />
+  <p>
+    After the ceremony and a few rounds of drinks and others things, we headed out on our bikes to check out more camps.
+    We found ourselves at a mockup hotel lobby with karaoke. The man behind the desk was really interesting and we
+    talked with him for a REALLY long time.
+  </p>
   <img loading="lazy" src="https://imgur.com/wWQFJ2O.jpg" />
-  
+  <p>
+    We ended up on top of their cargo containers at some point and had a great view of the playa.
+  </p>
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/OhkUZUHFtwI" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+  <p>
+    After some time we biked to the inner-most ring road of the city, The Esplanade. This is the highest trafficked
+    road in Burning Man, as your shortest route from anywhere to anywhere else almost always passes through this ring
+    road at some point.
+  </p>
+  <p>
+    Because of this being prime real estate, camp placement along The Esplanade is reserved for the largest and most
+    dedicated camps at the burn. One such camp is Brulée, a circus arts camp. The camp is a cube built out of the
+    gigantic scaffolding that make up the aisles at Costco. In the center is a stage with performance artists rotating
+    through. A majority of the acts were partner gymnastics with some element of fire juggling involved. We climbed up
+    the scaffolding to the second story shelving to watch, and saw a man on stage holding an upside-down woman above
+    him, while she was juggling a stick with her feet, while the stick was on fire. Very impressive!
+  </p>
   <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/G03xm09LUzw" width="fit-content" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   
+  <p>
+    Continuing counterclockwise up of the Esplanade from Brulée, we made our way to Opulent Temple, which supposedly
+    Diplo was going to be performing a set at. When we got to the sound camp, we saw close to a thousand other people
+    there as well, with a scattered perimeter of parked bikes lit up, circling the area. Off to the side of center
+    stage was this group of people spinning fire and poi.
+  </p>
   <img loading="lazy" src="https://imgur.com/9YeBNCO.jpg" />
   <p>
     This next image is one of my favorite pictures of the entire burn, because it's very representative of the kind of thing
@@ -41,12 +93,32 @@
     return. The interior is wooden paneled and decorated to make you feel like you're below deck on a wooden ship. 
   </p>
   <img loading="lazy" src="https://imgur.com/rvEDasB.jpg" />
+  <p>
+    One of my favorite camps was Golden Guy Alley. I don't have the best photos but this was a mini neighborhood
+    stretched out into a long corridor alley with a few branching side streets, completely filled with small
+    lounges, sake bars, and art galleries. The goal was to replicate the atmosphere of
+    <a href="https://youtu.be/O-FWobFA0S8?si=6vjQ-bjSKuQ8vMBf&t=16" target="_blank">Memory Lane in Shinjuku, Tokyo</a>.
+  </p>
+
+  <img loading="lazy" src="https://imgur.com/b6sm1ZA.jpg" />
+  <img loading="lazy" src="https://imgur.com/msuqoh0.jpg" />
+  <img loading="lazy" src="https://imgur.com/DdHgoD4.jpg" />
+  <p>
+    Near the Man, there was this 2 story tall willow tree made of LED cubes. The base color would slowly shift through
+    all the colors of the rainbow, and streaks of complimentary colors would randomly fall through the cubes like rain
+    trickling over leaves. In this photo, the base color was green with accent colors of blue and red trickling down.
+  </p>
+  <img loading="lazy" src="https://imgur.com/iRm7Vnd.jpg" />
 
   <div class="divider"></div>
   <h2>Friday</h2>
+
+  <p>
+    This was the day that the rain was expected to arrive. We'd have some time early in the day after waking up around
+    11am to enjoy it, but at some point we'd have to hunker down for a bit.
+  </p>
   <img loading="lazy" src="https://imgur.com/bntdbYV.jpg" />
   <img loading="lazy" src="https://imgur.com/vsjDZMZ.jpg" />
-  <img loading="lazy" src="https://imgur.com/VcWDzWO.jpg" />
   <p>
     This piece was one of my favorites, it was a giant bison made of driftwood with a guiding lantern the illuminated
     the night from a distance, and once you approached it there would be a ladder to climb up onto a porch alongside
@@ -55,8 +127,60 @@
     chandelier at head level. I regret not getting more pictures of this one!
   </p>
   <img loading="lazy" src="https://imgur.com/gcB6gtx.jpg" />
-  <img loading="lazy" src="https://imgur.com/W0u7scg.jpg" />
+  <p>
+    We crowded into a rented U-haul van and waited out the storm together
+  </p>
+  <img loading="lazy" src="https://imgur.com/eAmfUYZ.jpg" />
+  <p>
+    I don't have many more stories to show for this day, honestly. Once the rains started, they came down harder than
+    expected throughout the night and we were being instructed over <a href="bmir.org">FM radio by the festival organization</a>
+    to wait it out at camp. We occasionally visited our neighbors to see how they were fairing, but that was the extent
+    of it.
+  </p>
 
+  <div class="divider"></div>
+  <h2>Saturday</h2>
+  <p>
+    With the rain gone and things starting to dry up again, A friend and I decided to check out Esplanade and see how
+    everything fared. The roads were lumpy and uneven, making it difficult to ride bikes over.
+  </p>
+  <img loading="lazy" src="https://imgur.com/Vck4VXI.jpg" />
+  <p>
+    Water had pooled in one particular spot around a bar, but most people didn't seem to mind at all.
+  </p>
+  <img loading="lazy" src="https://imgur.com/VcWDzWO.jpg" />
+  <p>
+    In the playa was this tower built out of two-by-fours that climbed ~4 stories high. Anyone could freely climb it,
+    but it did feel shaky at the top. You just literally would start climbing on it from the inside, no harnesses or
+    other safety mechanism. Sometimes you'd see people climb it from the outside which felt super unsafe, but really
+    there wasn't anything more safe about doing it on the interior either.
+  </p>
+  <img loading="lazy" src="https://imgur.com/0KZDVZx.jpg" />
+  <img loading="lazy" src="https://imgur.com/s6xjGOs.jpg" />
+  <p>
+    Later on we ran into a few people that set up a hot sake station at an intersection, somewhere around the crossroads
+    of 3:30 & D. The sake flowed through the copper pipe where it would be heated up, then out into whatever cup you had.
+  </p>
+  <img loading="lazy" src="https://imgur.com/l0fWWsO.jpg" />
+  <p>
+    I was really impressed by just how much fun we were all having even with the rain and mud. Everyone was just so
+    happy and upbeat, while the few folks with internet connections kept saying how the rest of the country thought
+    we were struggling and stuck. I mean we were stuck technically, but literally 99.9% of everyone had already planned
+    to stay throughout the rainy period anyways so it wasn't like there were shortages of supplies either.
+  </p>
+  <img loading="lazy" src="https://imgur.com/tdgYfJK.jpg" />
+  <p>
+    Out in deep playa, there was a train station set up leading to nowhere. The rails emerged out of the desert and
+    receded back into it shortly after. Inside the props and building surrounding the tracks were hidden speakers and
+    sometimes they'd play spatially-correct 3d sound of a train passing by. The artists must have set up microphones
+    around train tracks while a train was passing because the sound was shockingly realistic.
+  </p>
+  <p>
+    Inside the building was a waiting room and small operator room with an old MS-DOS terminal covered in to-do notes
+    and memos about the train. Every inch of the waiting room was filled with posters, art, furniture, and props from
+    the last 1800's; the attention to detail on this project was insane.
+  </p>
+  <img loading="lazy" src="https://imgur.com/W0u7scg.jpg" />
   <p>
     I visited the temple, but didn't take any pictures besides this one from the outside. As you approach it, the crowds
     energy completely changes and everything becomes silent and pensive. The air practically weighs heavily in your lungs
@@ -69,36 +193,28 @@
     deeply into some stranger's life. 
   </p>
   <img loading="lazy" src="https://imgur.com/0N13gLb.jpg" />
-
-  <img loading="lazy" src="https://imgur.com/pGaYQd8.jpg" />
-
-  <img loading="lazy" src="https://imgur.com/b6sm1ZA.jpg" />  
-  <img loading="lazy" src="https://imgur.com/msuqoh0.jpg" />
-  <img loading="lazy" src="https://imgur.com/DdHgoD4.jpg" />
-
-  <div class="divider"></div>
-  <h2>Saturday</h2>
-  <img loading="lazy" src="https://imgur.com/Vck4VXI.jpg" />
-  <img loading="lazy" src="https://imgur.com/0KZDVZx.jpg" />
-  <img loading="lazy" src="https://imgur.com/s6xjGOs.jpg" />
-  <img loading="lazy" src="https://imgur.com/l0fWWsO.jpg" />
-  
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/OhkUZUHFtwI" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   <p>
-    Towards one of the very farthest corners of the outer playa, I saw the very faintest of yellow lights flickering like
-    a candle in the far distance. It was so small that I thought it might be someone's distant headlamp but as it
-    remained motionless I decided to ride towards it. As I got closer, I saw it surrounded by a large dim red glow, and
-    happening upon it I found it was a giant replica of the Fat Man atom bomb acting as a massive combo space heater and
-    sausage grill! It was a father-son duo that built it and hauled it out there. A dozen people were around it, how could
-    I have missed this after so much time exploring out here?
+    Later that night after dinner it was time to explore more camps and meet more people. We took off on our bikes and
+    continued exploring the city.
   </p>
-  <img loading="lazy" src="https://imgur.com/ECzRKVv.jpg" />
+  <img loading="lazy" src="https://imgur.com/pGaYQd8.jpg" />
 
   <div class="divider"></div>
   <h2>Sunday</h2>
-  <img loading="lazy" src="https://imgur.com/rKyLRTV.jpg" />
+
+  <p>
+    Today was the day of the Man burning! People were uncertain if it would happen because of the rain, but ultimately
+    it resumed (one day late). We ate dinner early and headed over to the gathering in time to get a good spot since
+    for some of us, it was our first times seeing the burn.
+  </p>
+  <img loading="lazy" src="https://imgur.com/SMqg14Z.jpg" />
+  <p>
+    The perimeter guards set up a half kilometer radius around the man that nobody besides fire crew were allowed to
+    pass. We were able get spots on the ground a few rows of people behind the front, which all things considered was
+    really close! 
+  </p>
   <img loading="lazy" src="https://imgur.com/kVVv3J7.jpg" />
+  <img loading="lazy" src="https://imgur.com/rKyLRTV.jpg" />
   <p>
     Watching the man burn was incredible. Not only was it by far the largest bonfire I'd ever seen by far, but it had
     legitimately the best fireworks show I've ever seen in my life. It's not by video, but
@@ -135,14 +251,33 @@
     display for the main night, car after car lined up pouring out music and light.
   </p>
   <img loading="lazy" src="https://imgur.com/rYbtABg.jpg" />
-
-  
   <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/Fe9a2Vg-2rU" width="fit-content" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>  
-
+  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+  <p>
+    At some point I walked up onto the top floor of an art car built to look like a small church called The House of
+    Bass, where I got this next picture looking out at the ring of other art cars around where the man once burned.
+  </p>
   <img loading="lazy" src="https://imgur.com/ynvLADj.jpg" />
-  <img loading="lazy" src="https://imgur.com/iRm7Vnd.jpg" />
+  <img loading="lazy" src="https://imgur.com/nCFDeOC.jpg" />
+  <p>
+    Towards one of the very farthest corners of the outer playa, I saw the very faintest of yellow lights flickering like
+    a candle in the far distance. It was so small that I thought it might be someone's distant headlamp but as it
+    remained motionless I decided to ride towards it. As I got closer, I saw it surrounded by a large dim red glow, and
+    happening upon it I found it was a giant replica of the Fat Man atom bomb acting as a massive combo space heater and
+    sausage grill! It was a father-son duo that built it and hauled it out there. A dozen people were around it, how could
+    I have missed this after so much time exploring out here?
+  </p>
+  <img loading="lazy" src="https://imgur.com/ECzRKVv.jpg" />
+  
+  <div class="divider"></div>
+  <h2>Monday</h2>
+  <img loading="lazy" src="https://imgur.com/g6XRRUO.jpg" />
 
+  <p>
+    The following morning we struck down the camp, packed up, and started exodus process. Because I was on a motorcycle,
+    my exit was super easy and fast. I was allowed to lane split through the line all the way back to Reno, and I used
+    a GoPro to show what the line back to the paved road was like.
+  </p>
   <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/uQ_kAJ2N1Lw" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 
