Adding custom color to Chrome+Safari toolbars

--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -133,7 +133,7 @@
   <img loading="lazy" src="https://imgur.com/eAmfUYZ.jpg" />
   <p>
     I don't have many more stories to show for this day, honestly. Once the rains started, they came down harder than
-    expected throughout the night and we were being instructed over <a href="bmir.org">FM radio by the festival organization</a>
+    expected throughout the night and we were being instructed over <a href="https://www.bmir.org" target="_blank">radio by the festival organization</a>
     to wait it out at camp. We occasionally visited our neighbors to see how they were fairing, but that was the extent
     of it.
   </p>
