updating trips page

--- a/src/app/travels/road_to_ushuaia/road_to_ushuaia_page.html
+++ b/src/app/travels/road_to_ushuaia/road_to_ushuaia_page.html
@@ -10,8 +10,9 @@
   <div class="divider"></div>
 
   <p>
-    If you'd like to follow along with my trip, bookmark this page and I'll soon have it redirect to where you can see
-    regular updates. Expect the trip to start in late July.
+    Redirecting to my thread on Advrider.com...
   </p>
-  <img id="pleaseHold" src="https://t4.ftcdn.net/jpg/02/38/52/19/360_F_238521952_fBFiEJuryfKNUJ6ElmZChaQIMv6CzGWV.jpg"/>
+  <p>
+    If you'd like to reach me direct, text me on Whatsapp!
+  </p>
 </mat-card>
