--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -16,7 +16,7 @@
     ride from California to the very bottom of South America. I left my job in order to properly
     accomplish this one.
   </p>
-  <img loading="lazy" src="https://t4.ftcdn.net/jpg/02/38/52/19/360_F_238521952_fBFiEJuryfKNUJ6ElmZChaQIMv6CzGWV.jpg" />
+  <img loading="lazy" src="https://advrider.com/f/attachments/p_20240726_144422-jpg.6156665/" />
 </mat-card>
 
 <!-- 
