--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -8,11 +8,11 @@
 <div class="page-container">
 <mat-card routerLink="/road-to-ushuaia">
   <mat-card-header>
-    <mat-card-title>Motorcycle ride from San Francisco to the Ushuaia, Argentina (Upcoming)</mat-card-title>
-    <mat-card-subtitle>Don't get got</mat-card-subtitle>
+    <mat-card-title>Motorcycle ride from California to bottom of Argentina</mat-card-title>
+    <mat-card-subtitle>hablas español?</mat-card-subtitle>
   </mat-card-header>
   <p>
-    This July, I'm planning to ride my motorcycle on the largest expedition I've ever done; a 6 month
+    I'm riding my motorcycle on the largest expedition I've ever done; a 7 month
     ride from California to the very bottom of South America. I left my job in order to properly
     accomplish this one.
   </p>
