Fixing image URL

--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -480,7 +480,7 @@
     of the people are either sitting along the seawall talking to each other or carting supplies/fish on the road in
     wagons and carts.
 
-    <img loading="lazy" src="https://imgur.com/xumymlw" />
+    <img loading="lazy" src="https://imgur.com/xumymlw.jpeg" />
   </p>
 
   <div class="divider"></div>
