--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -6,7 +6,9 @@
 </nav>
 
 <div class="home-body">
-  <img src="https://avatars.githubusercontent.com/u/10764966?s=400&u=a47f46f895511422da7236d0d694dee14ac122cf&v=4">
+  <img
+    src="https://avatars.githubusercontent.com/u/10764966?s=400&u=a47f46f895511422da7236d0d694dee14ac122cf&v=4"
+    alt="A picture of the side of my head, showing off my mohawk hair style">
   <p class="sub-title">Hi, my name's Blake Williams<br>I'm a senior software engineer focused on AR/VR projects</p>
 
   <span>
