--- a/src/app/homepage/home_page.scss
+++ b/src/app/homepage/home_page.scss
@@ -17,8 +17,9 @@ mat-tab-group {
     margin: 100px auto;
 
     img {
-        width: 100px;
         border-radius: 50px;
+        height: 100px;
+        width: 100px;
     }
 
     .sub-title {
