Adding email address to home page

--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -8,12 +8,13 @@
 <div class="home-body">
   <img
     src="https://avatars.githubusercontent.com/u/10764966?s=400&u=a47f46f895511422da7236d0d694dee14ac122cf&v=4"
-    alt="A picture of the side of my head, showing off my mohawk hair style">
+    alt="A side profile image of Blake Williams, showing off a mohawk hair style">
   <p class="sub-title">Hi, my name's Blake Williams<br>I'm a senior software engineer focused on AR/VR projects</p>
 
   <span>
     <a href="https://linkedin.com/in/blauwill" target="_blank">LinkedIn</a>,
-    <a href="https://github.com/blakewilliams1" target="_blank">Github</a>
+    <a href="https://github.com/blakewilliams1" target="_blank">Github</a>,
+    <a href="mailto:blake@blakewilliams.org">Email</a>
   </span>
 </div>
 
