--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -12,7 +12,7 @@
     <mat-card-subtitle>hablas español?</mat-card-subtitle>
   </mat-card-header>
   <p>
-    I'm riding my motorcycle on the largest expedition I've ever done; a 7 month
+    I'm riding my motorcycle on the largest expedition I've ever done; a one year
     ride from California to the very bottom of South America. I left my job in order to properly
     accomplish this one.
   </p>
