--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -13,8 +13,7 @@
 
   <span>
     <a href="https://linkedin.com/in/blauwill" target="_blank">LinkedIn</a>,
-    <a href="https://github.com/blakewilliams1" target="_blank">Github</a>,
-    <a href="mailto:blake@blakewilliams.org">Email</a>
+    <a href="https://github.com/blakewilliams1" target="_blank">Github</a>
   </span>
 </div>
 
