--- a/src/app/career/career_page.html
+++ b/src/app/career/career_page.html
@@ -5,4 +5,6 @@
   <a mat-tab-link [style.opacity]="1" routerLink="/career">Career</a>
 </nav>
 
+<h3>Feel free to <a href="/contact">contact me</a> if you'd like to get in touch!</h3>
+
 <timeline [timelineEvents]="projectTimeline"></timeline>
