--- a/src/app/contact/contact_form_page.html
+++ b/src/app/contact/contact_form_page.html
@@ -9,7 +9,7 @@
   <mat-card *ngIf="!formSubmittedSuccessfully">
     <h1 style="text-align: center">Contact Form</h1>
     <div class="divider"></div>
-    <p>This form will send me an email (not posting my email address publicly reduces it getting scraped by bots). I'll respond to you asap!</p>
+    <p>This form will send an email directly to me. I'll respond to you asap!</p>
 
     <form (ngSubmit)="onSubmit()" [formGroup]="contactForm" >
         <mat-form-field required class="short-field" appearance="outline">
@@ -32,9 +32,12 @@
           <textarea matInput formControlName="message" placeholder="Your message"></textarea>
           <mat-error *ngIf="messageField.invalid">Message must not be empty</mat-error>
         </mat-form-field>
-      <button mat-button type="submit" [disabled]="contactForm.invalid">Send Email</button>
+      <button mat-button *ngIf="!formIsSubmitting" type="submit" [disabled]="contactForm.invalid">
+        Send Email
+      </button>
     </form>
 
+    <mat-spinner *ngIf="formIsSubmitting" [diameter]="36"></mat-spinner>
   </mat-card>
 
   
