--- a/src/app/contact/contact_form_page.scss
+++ b/src/app/contact/contact_form_page.scss
@@ -29,3 +29,9 @@ mat-form-field {
 textarea {
   min-height: 160px;
 }
+
+// This rule prevents the background of text inputs turn blue when auto-filling the inputs.
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #424242 inset !important;
+  -webkit-text-fill-color: white;
+}
