Using image resizing directive

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -46,7 +46,7 @@
     else. A few key experiences made me have second thoughts on that impression, and when I was offered
     a spot at a camp I took it and went to see what the hype was about.
   </p>
-  <img loading="lazy" src="https://imgur.com/CL5Ra65.jpg" />
+  <img loading="lazy" imgurId="CL5Ra65" />
 </mat-card>
 
 <mat-card routerLink="/shasta">
@@ -56,9 +56,9 @@
   </mat-card-header>
   <p>
     I solo climbed Mt. Shasta over 2 days, ascending the Avalanche Gulch route and taking my snowboarding gear with me
-    to backcountry ride back down after summitting
+    to backcountry ride back down after reaching the summit.
   </p>
-  <img loading="lazy" src="https://imgur.com/z6m5jsM.jpg" />
+  <img loading="lazy" imgurId="z6m5jsM" />
 </mat-card>
 
   <mat-card routerLink="/mauritania-trip">
@@ -70,7 +70,7 @@
       In the early spring of 2023 I solo traveled to Mauritania, west Africa to hike through a portion
       of the Sahara desert over 6 and a half days, and hop the worlds longest freight train.
     </p>
-    <img loading="lazy" src="https://imgur.com/VGU6TyD.jpg" />
+    <img loading="lazy" imgurId="VGU6TyD" />
   </mat-card>
 
 <a href="https://www.advrider.com/f/threads/san-francisco-to-tuktoyaktuk-2022.1559749/" target="_blank" class="no-underline">
