--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -24,36 +24,36 @@
     new camp mates I wanted to make an impression so I bought sushi in Reno and kept it on ice for the last hour drive
     out to the playa.
   </p>
-  <img loading="lazy" src="https://imgur.com/jFwj1PE.jpg" />
+  <img loading="lazy" imgurId="jFwj1PE" />
   <p>
     By the time I had arrived, pretty much all of the attendees were there already so there was close to no line for
     entrance. I waited at the front of the line for the next round of cars to drive into ticket processing and vehicle
     inspections.
-  <img loading="lazy" src="https://imgur.com/MU2JLMu.jpg" />
-  <img loading="lazy" src="https://imgur.com/5H5p40Y.jpg" />
+  <img loading="lazy" imgurId="MU2JLMu" />
+  <img loading="lazy" imgurId="5H5p40Y" />
   <p>
     After making it through the lines and ringing the gong at entrance, I made my way towards the camps around 6:30 & C.
 
   </p>
-  <img loading="lazy" src="https://imgur.com/UmbLGVb.jpg" />
-  <img loading="lazy" src="https://imgur.com/XwX2dhE.jpg" />
+  <img loading="lazy" imgurId="UmbLGVb" />
+  <img loading="lazy" imgurId="XwX2dhE" />
   <p>
     Finding art installations like what's in the next photo was super common. The closer you got to the Man, the higher
     the density of art/sculptures/interactive things. As you start making your way out into the deep playa, they taper
     off and you see oddities scattered off on the distant horizon that you need to pedal out to.
   </p>
-  <img loading="lazy" src="https://imgur.com/DgX1ymj.jpg" />
+  <img loading="lazy" imgurId="DgX1ymj" />
   <p>
     Two friends of mine from Canada were getting married at the camp the night I arrived! The ceremony was held inside
     the common space of the camp and the vows were a good mix of funny and thoughtful.
   </p>
-  <img loading="lazy" src="https://imgur.com/5DPOgp9.jpg" />
+  <img loading="lazy" imgurId="5DPOgp9" />
   <p>
     After the ceremony and a few rounds of drinks and others things, we headed out on our bikes to check out more camps.
     We found ourselves at a mockup hotel lobby with karaoke. The man behind the desk was really interesting and we
     talked with him for a REALLY long time.
   </p>
-  <img loading="lazy" src="https://imgur.com/wWQFJ2O.jpg" />
+  <img loading="lazy" imgurId="wWQFJ2O" />
   <p>
     We ended up on top of their cargo containers at some point and had a great view of the playa.
   </p>
@@ -81,7 +81,7 @@
     there as well, with a scattered perimeter of parked bikes lit up, circling the area. Off to the side of center
     stage was this group of people spinning fire and poi.
   </p>
-  <img loading="lazy" src="https://imgur.com/9YeBNCO.jpg" />
+  <img loading="lazy" imgurId="9YeBNCO" />
   <p>
     This next image is one of my favorite pictures of the entire burn, because it's very representative of the kind of thing
     you experience at night when biking through deep playa. Riding off into the dark while high, you hear the distant
@@ -92,7 +92,7 @@
     oasis in vast nothingness around you. You knock on the door with a smile, and are greeted with warm smiles in
     return. The interior is wooden paneled and decorated to make you feel like you're below deck on a wooden ship. 
   </p>
-  <img loading="lazy" src="https://imgur.com/rvEDasB.jpg" />
+  <img loading="lazy" imgurId="rvEDasB" />
   <p>
     One of my favorite camps was Golden Guy Alley. I don't have the best photos but this was a mini neighborhood
     stretched out into a long corridor alley with a few branching side streets, completely filled with small
@@ -100,15 +100,15 @@
     <a href="https://youtu.be/O-FWobFA0S8?si=6vjQ-bjSKuQ8vMBf&t=16" target="_blank">Memory Lane in Shinjuku, Tokyo</a>.
   </p>
 
-  <img loading="lazy" src="https://imgur.com/b6sm1ZA.jpg" />
-  <img loading="lazy" src="https://imgur.com/msuqoh0.jpg" />
-  <img loading="lazy" src="https://imgur.com/DdHgoD4.jpg" />
+  <img loading="lazy" imgurId="b6sm1ZA" />
+  <img loading="lazy" imgurId="msuqoh0" />
+  <img loading="lazy" imgurId="DdHgoD4" />
   <p>
     Near the Man, there was this 2 story tall willow tree made of LED cubes. The base color would slowly shift through
     all the colors of the rainbow, and streaks of complimentary colors would randomly fall through the cubes like rain
     trickling over leaves. In this photo, the base color was green with accent colors of blue and red trickling down.
   </p>
-  <img loading="lazy" src="https://imgur.com/iRm7Vnd.jpg" />
+  <img loading="lazy" imgurId="iRm7Vnd" />
 
   <div class="divider"></div>
   <h2>Friday</h2>
@@ -117,8 +117,8 @@
     This was the day that the rain was expected to arrive. We'd have some time early in the day after waking up around
     11am to enjoy it, but at some point we'd have to hunker down for a bit.
   </p>
-  <img loading="lazy" src="https://imgur.com/bntdbYV.jpg" />
-  <img loading="lazy" src="https://imgur.com/vsjDZMZ.jpg" />
+  <img loading="lazy" imgurId="bntdbYV" />
+  <img loading="lazy" imgurId="vsjDZMZ" />
   <p>
     This piece was one of my favorites, it was a giant bison made of driftwood with a guiding lantern the illuminated
     the night from a distance, and once you approached it there would be a ladder to climb up onto a porch alongside
@@ -126,11 +126,11 @@
     up cottage living room, complete with a rocking chair, wood-burning cast iron fireplace, rugs, and a small
     chandelier at head level. I regret not getting more pictures of this one!
   </p>
-  <img loading="lazy" src="https://imgur.com/gcB6gtx.jpg" />
+  <img loading="lazy" imgurId="gcB6gtx" />
   <p>
     We crowded into a rented U-haul van and waited out the storm together
   </p>
-  <img loading="lazy" src="https://imgur.com/eAmfUYZ.jpg" />
+  <img loading="lazy" imgurId="eAmfUYZ" />
   <p>
     I don't have many more stories to show for this day, honestly. Once the rains started, they came down harder than
     expected throughout the night and we were being instructed over <a href="https://www.bmir.org" target="_blank">radio by the festival organization</a>
@@ -144,31 +144,31 @@
     With the rain gone and things starting to dry up again, A friend and I decided to check out Esplanade and see how
     everything fared. The roads were lumpy and uneven, making it difficult to ride bikes over.
   </p>
-  <img loading="lazy" src="https://imgur.com/Vck4VXI.jpg" />
+  <img loading="lazy" imgurId="Vck4VXI" />
   <p>
     Water had pooled in one particular spot around a bar, but most people didn't seem to mind at all.
   </p>
-  <img loading="lazy" src="https://imgur.com/VcWDzWO.jpg" />
+  <img loading="lazy" imgurId="VcWDzWO" />
   <p>
     In the playa was this tower built out of two-by-fours that climbed ~4 stories high. Anyone could freely climb it,
     but it did feel shaky at the top. You just literally would start climbing on it from the inside, no harnesses or
     other safety mechanism. Sometimes you'd see people climb it from the outside which felt super unsafe, but really
     there wasn't anything more safe about doing it on the interior either.
   </p>
-  <img loading="lazy" src="https://imgur.com/0KZDVZx.jpg" />
-  <img loading="lazy" src="https://imgur.com/s6xjGOs.jpg" />
+  <img loading="lazy" imgurId="0KZDVZx" />
+  <img loading="lazy" imgurId="s6xjGOs" />
   <p>
     Later on we ran into a few people that set up a hot sake station at an intersection, somewhere around the crossroads
     of 3:30 & D. The sake flowed through the copper pipe where it would be heated up, then out into whatever cup you had.
   </p>
-  <img loading="lazy" src="https://imgur.com/l0fWWsO.jpg" />
+  <img loading="lazy" imgurId="l0fWWsO" />
   <p>
     I was really impressed by just how much fun we were all having even with the rain and mud. Everyone was just so
     happy and upbeat, while the few folks with internet connections kept saying how the rest of the country thought
     we were struggling and stuck. I mean we were stuck technically, but literally 99.9% of everyone had already planned
     to stay throughout the rainy period anyways so it wasn't like there were shortages of supplies either.
   </p>
-  <img loading="lazy" src="https://imgur.com/tdgYfJK.jpg" />
+  <img loading="lazy" imgurId="tdgYfJK" />
   <p>
     Out in deep playa, there was a train station set up leading to nowhere. The rails emerged out of the desert and
     receded back into it shortly after. Inside the props and building surrounding the tracks were hidden speakers and
@@ -180,7 +180,7 @@
     and memos about the train. Every inch of the waiting room was filled with posters, art, furniture, and props from
     the last 1800's; the attention to detail on this project was insane.
   </p>
-  <img loading="lazy" src="https://imgur.com/W0u7scg.jpg" />
+  <img loading="lazy" imgurId="W0u7scg" />
   <p>
     I visited the temple, but didn't take any pictures besides this one from the outside. As you approach it, the crowds
     energy completely changes and everything becomes silent and pensive. The air practically weighs heavily in your lungs
@@ -192,12 +192,12 @@
     temple; I had no grief in my heart that merited release. I felt with each letter or open note I saw, I was intruding
     deeply into some stranger's life. 
   </p>
-  <img loading="lazy" src="https://imgur.com/0N13gLb.jpg" />
+  <img loading="lazy" imgurId="0N13gLb" />
   <p>
     Later that night after dinner it was time to explore more camps and meet more people. We took off on our bikes and
     continued exploring the city.
   </p>
-  <img loading="lazy" src="https://imgur.com/pGaYQd8.jpg" />
+  <img loading="lazy" imgurId="pGaYQd8" />
 
   <div class="divider"></div>
   <h2>Sunday</h2>
@@ -207,14 +207,14 @@
     it resumed (one day late). We ate dinner early and headed over to the gathering in time to get a good spot since
     for some of us, it was our first times seeing the burn.
   </p>
-  <img loading="lazy" src="https://imgur.com/SMqg14Z.jpg" />
+  <img loading="lazy" imgurId="SMqg14Z" />
   <p>
     The perimeter guards set up a half kilometer radius around the man that nobody besides fire crew were allowed to
     pass. We were able get spots on the ground a few rows of people behind the front, which all things considered was
     really close! 
   </p>
-  <img loading="lazy" src="https://imgur.com/kVVv3J7.jpg" />
-  <img loading="lazy" src="https://imgur.com/rKyLRTV.jpg" />
+  <img loading="lazy" imgurId="kVVv3J7" />
+  <img loading="lazy" imgurId="rKyLRTV" />
   <p>
     Watching the man burn was incredible. Not only was it by far the largest bonfire I'd ever seen by far, but it had
     legitimately the best fireworks show I've ever seen in my life. It's not by video, but
@@ -227,19 +227,19 @@
     <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/BtWrjoaa3G8" width="fit-content" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   </p>
-  <img loading="lazy" src="https://imgur.com/CL5Ra65.jpg" />
+  <img loading="lazy" imgurId="CL5Ra65" />
   <p>
     As the man and structure he's on burns down to a smoldering hill and the radiant heat begins to border on being
     tolerable, the guards allow everyone to approach. 
   </p>
   
-  <img loading="lazy" src="https://imgur.com/3LJwWuQ.jpg" />
+  <img loading="lazy" imgurId="3LJwWuQ" />
   <p>A large portion of people begin stripping off their clothes and
     start to run in a massive circle around the bonfire. I joined in and followed the crowd as it raced around, the heat
     unbelievably hot. The pile was square in shape and rounding the corners was so hot at times you'd be jumping over
     the section and people would be on the sidelines with spray bottles of water to help cool you off. 
   </p>
-  <img loading="lazy" src="https://imgur.com/5ZjFceb.jpg" />
+  <img loading="lazy" imgurId="5ZjFceb" />
   <p>
     I set my clothes
     on the ground, but completely lost track of them by the time I was ready to get dressed again and wandered naked for
@@ -250,15 +250,15 @@
     While the fervor of the the main burn was slowing down, all the art cars had been encircling the area, all on full
     display for the main night, car after car lined up pouring out music and light.
   </p>
-  <img loading="lazy" src="https://imgur.com/rYbtABg.jpg" />
+  <img loading="lazy" imgurId="rYbtABg" />
   <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/Fe9a2Vg-2rU" width="fit-content" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   <p>
     At some point I walked up onto the top floor of an art car built to look like a small church called The House of
     Bass, where I got this next picture looking out at the ring of other art cars around where the man once burned.
   </p>
-  <img loading="lazy" src="https://imgur.com/ynvLADj.jpg" />
-  <img loading="lazy" src="https://imgur.com/nCFDeOC.jpg" />
+  <img loading="lazy" imgurId="ynvLADj" />
+  <img loading="lazy" imgurId="nCFDeOC" />
   <p>
     Towards one of the very farthest corners of the outer playa, I saw the very faintest of yellow lights flickering like
     a candle in the far distance. It was so small that I thought it might be someone's distant headlamp but as it
@@ -267,11 +267,11 @@
     sausage grill! It was a father-son duo that built it and hauled it out there. A dozen people were around it, how could
     I have missed this after so much time exploring out here?
   </p>
-  <img loading="lazy" src="https://imgur.com/ECzRKVv.jpg" />
+  <img loading="lazy" imgurId="ECzRKVv" />
   
   <div class="divider"></div>
   <h2>Monday</h2>
-  <img loading="lazy" src="https://imgur.com/g6XRRUO.jpg" />
+  <img loading="lazy" imgurId="g6XRRUO" />
 
   <p>
     The following morning we struck down the camp, packed up, and started exodus process. Because I was on a motorcycle,
