--- a/src/app/travels/shasta/shasta_page.html
+++ b/src/app/travels/shasta/shasta_page.html
@@ -32,13 +32,13 @@
     gear at the car fearing I wouldn't be able to summit with this much weight on my back. I tried it on and just kept
     telling myself there is no shame in stashing your gear off trail if you get too far into the hike and change your
     mind. The trail starts with fairly shallow trails in the trees leading up to a stone cabin.
-    <img loading="lazy" src="https://imgur.com/K592dul.jpg" /><br>
+    <img loading="lazy" imgurId="K592dul" /><br>
     The cabin supposedly is
     right about where things open up and the trees lesson, but neither myself nor the people I was walking in the
     vicinity of could find it either. I made it about an hour into the hike before the trail got too steep and I needed
     to put on crampons. This is by far the most I've ever used crampons, and they're an absolute godsend in the snow.
     I stopped to do this and got my first real good view of Shasta valley behind me:
-    <img loading="lazy" src="https://imgur.com/eZVbf3D.jpg" /><br>
+    <img loading="lazy" imgurId="eZVbf3D" /><br>
     I kept trudging uphill, the weight of my pack still on my mind but also optimistic about how close Lake Helen seemed
     to be. It felt like doing stair climbers the last 1300 ft elevation gain to camp with the incredibly heavy pack on
     my back. The very last stretch to the camp was by far the steepest so far. Lake Helen is at 9k ft, I woke up this
@@ -46,7 +46,7 @@
     About a dozen other groups are here, some are setting up tents for an early ascent tomorrow, some are sliding down
     the hill in front of us on their return from the summit, and a select few are riding snowboards and skis back down
     that same glissade path. 
-    <img loading="lazy" src="https://imgur.com/j5JO8jX.jpg" /><br>
+    <img loading="lazy" imgurId="j5JO8jX" /><br>
     Leaving all the heavy gear I'm not taking to summit is really
     boosting my confidence for tomorrow. After setting up my tent and melting multiple rounds of snow in my cookware, I
     realize one reason why my pack is so heavy. The Fifth Season gave me a three-person tent, and I didn't bother checking
@@ -63,30 +63,30 @@
   wasn't locked closed and something was pressing it open. Luckily the wet things weren't needed for summit attempt and
   could be left out to dry, but I now needed to reboil water at 4am when I was supposed to be hitting the trail. I was
   already behind everyone else because I was snowboarding back down and didn't need to plan as much time for return.
-  <img loading="lazy" src="https://imgur.com/19J53dp.jpg" /><br>
+  <img loading="lazy" imgurId="19J53dp" /><br>
   Overall it was an hour setback to fix everything and gear back up, but luckily it put me right at the
   same departure time as the only other ski campers at Lake Helen; a couple from San Francisco and a day hiker. We all
   headed up Avalanche Gultch together and before long the sun had broke the horizon, casting a shadow of Mt. Shasta
   across the Trinity Alps to the west.
-  <img loading="lazy" src="https://imgur.com/JFM3WGb.jpg" /><br>
+  <img loading="lazy" imgurId="JFM3WGb" /><br>
   Avalanche Gulch's steepness was impressive, sometimes <a href="https://caltopo.com/m/1UKB" target="_blank">pushing upwards of 32°.</a>
-  <img loading="lazy" src="https://imgur.com/NhDdfz1.jpg" />
-  <img loading="lazy" src="https://imgur.com/dbucaxr.jpg" /><br>
+  <img loading="lazy" imgurId="NhDdfz1" />
+  <img loading="lazy" imgurId="dbucaxr" /><br>
   When the others started slowing down I continued on the last bit
   ahead of them. The sun was getting higher and I wanted to take out my face coverings soon.
   It was only 3/4 of a mile but took us about 3 hours to do. We all dropped our gear at the top of Avalanche Gulch
   because the snow wasn't great past there on upper mountain. They needed extra time to recoup, and a bit more than I
   could spend so I headed on, walking on the glacier behind Red Banks.  
-  <img loading="lazy" src="https://imgur.com/7qrmUEZ.jpg" /><br>
+  <img loading="lazy" imgurId="7qrmUEZ" /><br>
   After that it was a push up Misery Hill, still shrouded in wispy light fog.
-  <img loading="lazy" src="https://imgur.com/M2WIyRp.jpg" /><br>
+  <img loading="lazy" imgurId="M2WIyRp" /><br>
   Cresting over Misery Hill gave the first sign of the summit!
-  <img loading="lazy" src="https://imgur.com/AVgwuQS.jpg"/><br>
-  <img loading="lazy" src="https://imgur.com/CjXFlts.jpg" /><br>
+  <img loading="lazy" imgurId="AVgwuQS"/><br>
+  <img loading="lazy" imgurId="CjXFlts" /><br>
   It was just a light push over a flat saddle and a small switchback to the peak.
-  <img loading="lazy" src="https://imgur.com/vBBUSvW.jpg"/><br>
+  <img loading="lazy" imgurId="vBBUSvW"/><br>
   Actually reaching the peak was amazing. The accomplishment really set in and I made sure to sign the logbook.
-  <img loading="lazy" src="https://imgur.com/z6m5jsM.jpg" /><br>
+  <img loading="lazy" imgurId="z6m5jsM" /><br>
   The clouds hung around but
   would give way and show glimpses up to 100 mi away. Coming back down was a breeze. 
   I stopped at my snowboard at the
@@ -95,10 +95,10 @@
   that evening, but it was earlier than what the weather reports and rangers on mountain were expecting. Riding down on
   the snowboard was awesome! I was nervous at first, being the first skier or snowboarder to summit but also the first
   one down the gulch again. 
-  <img loading="lazy" src="https://imgur.com/KIqnrxF.jpg" /><br>
+  <img loading="lazy" imgurId="KIqnrxF" /><br>
   The conditions were great, the snow had softened, and I got down within 15 minutes back to Lake Helen. Lots of people
   sliding glissading down were filming, would be nice to get those videos somehow. 
-  <img loading="lazy" src="https://imgur.com/mOg8RNN.jpg" style="max-width: 60%; margin-left: auto; margin-right: auto; display: block;"/><br>
+  <img loading="lazy" imgurId="mOg8RNN" style="max-width: 60%; margin-left: auto; margin-right: auto; display: block;"/><br>
   Back at camp I packed everything up, and headed down to car. Riding the rest of the way down wasn't quite as enjoyable,
   all the snow downhill from there was moderately
   <a href="https://www.google.com/search?q=sun-cupped+snow&tbm=isch" target="_blank">sun-cupped</a> and you're riding over these craters
